# qi

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
qi/: __init__.py  cli.py  config.py  converter.py  file_operations.py  file_processor.py  generator.py  java_parser.py  linter.py  rules.py
tests/: test_cli.py  test_config.py  test_converter.py  test_file_operations.py  test_file_processor.py  test_generator.py  test_incremental_update.py  test_java_parser.py  test_linter.py  test_rules.py
tests/fixtures/: custom_rules.yaml  footway_rules.yaml  invalid_spec.yaml  mock_java_file.java  test_spec.yaml  valid_spec.yaml
